Fix page 1 diagram

--- a/Report/page1.lyx
+++ b/Report/page1.lyx
@@ -233,7 +233,7 @@ status open
 \noindent
 \align center
 \begin_inset Graphics
-	filename CoreCircuitFlow.eps
+	filename CoreCircuit2.eps
 	scale 30
 
 \end_inset
