--- a/Report/page7.lyx
+++ b/Report/page7.lyx
@@ -112,13 +112,11 @@ Bode Plot
 
 \end_inset
 
-The plot shows that our hand calculated f3dB was lower than the spice result.
- This was expected because we know that ZVTC conservatively estimates the
- bandwidth.
- The magnitude of the gain in our SPICE simulation was lower than the gain
- that we calculated by hand.
- The phase plot shows that there is a 2nd pole at a higher frequency than
- f3dB.
+As expected, our hand calculated 3dB bandwidth was lower than the spice
+ result because ZVTC conservatively estimates the bandwidth.
+ Interestingly, the two closely spaced kinks in phase plot around 3g with
+ little corresponding change in the magnitude plot suggest that there is
+ a closely spaced pole-zero pair around 3g.
  
 \end_layout
 
